# Ai-dev-portfolio

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260716_01_initial.py  20260716_02_rate_limits.py
backend/app/: api.py  db.py  main.py  models.py  schemas.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/repositories/: contact.py  rate_limit.py
backend/app/services/: ai.py  contact.py  email.py
backend/tests/: test_ai.py  test_api.py  test_config.py  test_contact_service.py  test_schemas.py
docs/: PROJECT_GUIDE_RU.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/e2e/: landing.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/components/: contact-form.test.tsx  contact-form.tsx  reveal.tsx
frontend/src/store/: contact.ts
postman/: AiDevPortfolio.postman_collection.json
