[project]
name = "ai-developer-portfolio-api"
version = "0.1.0"
description = "Contact API with AI-assisted request analysis"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.6,<3",
  "python-json-logger>=2,<4",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
